# ccn-template

./: .gitignore  .readthedocs.yml  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/: CODEOWNERS
.github/workflows/: ci.yml  coverage.yml  deploy-cibw.yml  deploy-pure-python.yml  deploy.yml  pull-request-links.yml
data/: README.md
docs/: gallery_conf.py  gen_ref_pages.py  index.md
docs/examples/: README.md  plot_latex_equations.py  plot_osf.py  test_example.py
docs/javascripts/: katex.js
docs/notes/: 00-workflow.md  02-packaging.md  03-documentation.md  04-docstrings.md  05-linters-and-tests.md  05-linters-style.md  06-ci.md  06-tests.md  07-ci.md  07-data.md  08-data.md  08-open-source.md  09-open-source.md
notes/: 00-workflow.md  01-structure.md  02-packaging.md  04-docstrings.md
src/ccn_template/: __init__.py  hello_world.py
tests/: test_ccntemplate.py
