[project]
name = "ccn_template"
# we use this instead of setting version, so that setuptools_scm can dynamically
# set the version number. see notes for details
dynamic = ["version"]
authors = [
  { name="Billy Broderick", email="author@example.com" },
]
description = "Template for CCN package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/flatironinstitute/ccn-template"

[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]

[tool.setuptools_scm]
write_to = "src/ccn_template/version.py"

[project.optional-dependencies]
docs = [
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs_section_index",
    "mkdocs_gen_files",
    "mkdocs_literate_nav",
    "mkdocs-gallery",
]
